2017-10-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/pp-scripts.pl: Fix

2017-10-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amgtar.c: fflush(mesgstream)
	* client-src/sendbackup.c: print sendbackup size and end line on error
	* server-src/dumper.c: Add debugging statement

2017-10-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c: Wait for the 'sendbackup: size' line before
	  sending the rresult to the driver

2017-10-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-application-stderr.pl: use lib '@amperldir@';

2017-10-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-dumper-try-again.pl: Don't do the check if
	  FAILURE_CODE is not set

2017-10-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/local-security.c: Add a child_watch_callback for the
	  amandad pid
	* common-src/security-util.c: Do not waitpid() if we have a
	  watch-source for it
	* server-src/amcheck.c: Use waitpid with pid
	* server-src/driver.c: Add debugging
	* server-src/dumper.c: Add debugging
	* server-src/planner.c: Add debugging

2017-10-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Get server result
	* client-src/sendbackup.c: Use full_write, check its result
	* server-src/dumper.c: return 1 since errstr is never set

2017-10-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	Send server result to client application and POST scripts
	* amandad-src/amandad.c (process_readnetfd): Fix for close before
	  event to read data is started
	* application-src/amgtar.c: Save the state file only if servr report
	  success
	* application-src/amlog-script.pl, application-src/amrandom.pl,
	  application-src/amraw.pl, application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Accept server result
	* client-src/client_util.c: Add a backup_result_t argument to
	  run_client_script* functions